--- a/TasbihCounter/TasbihCounter/Base.lproj/Main.storyboard
+++ b/TasbihCounter/TasbihCounter/Base.lproj/Main.storyboard
@@ -123,7 +123,7 @@
                                                     <color key="titleColor" red="1" green="0.73725490199999999" blue="0.12941176469999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="TargetButtonPreased:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OGg-tp-tdN"/>
+                                                    <action selector="targetButtonPreased:" destination="BYZ-38-t0r" eventType="touchUpInside" id="g5r-fM-gvg"/>
                                                 </connections>
                                             </button>
                                         </subviews>
